fix responsive on mobile

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -4,22 +4,26 @@
 
 @layer components {
     .circle {
-        position: absolute;
-        right: 40%;
-        top: 0;
         width: 35rem;
         height: 35rem;
         border-radius: 50%;
-        z-index: 0;
-        @apply bg-blueGray-50;
+        @apply absolute bg-blueGray-50 z-0 top-0;
+        @apply right-10 md:right-[40%];
     }
     .box {
-        position: absolute;
-        left: 0;
-        top: 0;
         width: 20rem;
         height: 35rem;
-        z-index: 0;
-        @apply bg-blueGray-50;
+        @apply absolute bg-blueGray-50 z-0 top-0 left-0;
+        @apply w-28 md:w-80;
+    }
+    .curve {
+        width: 100%;
+        height: 60%;
+        border-top-left-radius: 40%;
+        border-top-right-radius: 40%;
+        @apply hideen absolute bg-blueGray-50 z-0 bottom-0;
+    }
+    .wave {
+        @apply absolute w-full h-auto -bottom-1 inset-x-0 z-10 md:hidden;
     }
 }
